--- a/index.html
+++ b/index.html
@@ -65,8 +65,10 @@
 
         #settings-panel {
             position: fixed; top: 140px; left: 20px;
-            width: 250px; z-index: 1001;
-            padding: 20px; text-align: left;
+            width: 250px; max-width: 100vw; z-index: 1001;
+            text-align: left;
+            display: flex; flex-direction: column;
+            padding: 20px; box-sizing: border-box; /* Important pour que le padding n'élargisse pas le menu */
         }
 
         .setting-item {
@@ -554,9 +556,19 @@
 
 
         @media (max-width: 600px) {
+            @media (orientation: landscape) or (max-height: 500px){
+                .timer-large { font-size: 10vh; }
+                #settings-panel { width: 100vw; padding-bottom: 40px; overflow-y: auto; }
+                #flight-screen {overflow-y: auto;    /* Active le scroll vertical interne au menu */}
+            }
+            @media (orientation: portrait){
+                .timer-large { font-size: 15vw; } /* Plus gros sur mobile */
+                #settings-panel { width: 50vw; }
+                #badge-list-container { grid-template-columns: 1fr; gap: 15px; } /* 1 seule colonne sur petit mobile */
+            }
             body { overflow-y: auto !important ; height: auto; min-height: 100vh; }
-            #settings-panel { width: 85vw; }
-            .timer-large { font-size: 15vw; } /* Plus gros sur mobile */
+            
+            
             .glass-card { width: 90%; padding: 20px; margin : 20px; position : relative;}
             .btn-takeoff { position: fixed; bottom: 20px; right: 20px; padding: 15px 30px; z-index : 100; }
 
@@ -567,7 +579,6 @@
             /* On réduit légèrement la taille du texte pour que ça tienne sur une ligne */
             #history-table-body td { font-size: 0.85em; }
 
-            #badge-list-container { grid-template-columns: 1fr; gap: 15px; } /* 1 seule colonne sur petit mobile */
             #info-overlay .info-box { width: 90vw; max-width: none; height: 70vh; }
         }
   
