--- a/index.html
+++ b/index.html
@@ -557,18 +557,18 @@
 
         @media (max-width: 600px) {
             @media (orientation: landscape) or (max-height: 500px){
+                body { overflow-x: auto !important ; height: auto; min-height: 100vh; width: auto; min-width: 100vw; }
                 .timer-large { font-size: 10vh; }
                 #settings-panel { width: 100vw; padding-bottom: 40px; overflow-y: auto; }
-                #flight-screen {overflow-y: auto;    /* Active le scroll vertical interne au menu */}
+                #flight-screen {overflow-y: auto; overflow-x: auto;    /* Active le scroll vertical et horizontal interne au menu */}
             }
             @media (orientation: portrait){
+                body { overflow-y: auto !important ; height: auto; min-height: 100vh; }
                 .timer-large { font-size: 15vw; } /* Plus gros sur mobile */
                 #settings-panel { width: 50vw; }
                 #badge-list-container { grid-template-columns: 1fr; gap: 15px; } /* 1 seule colonne sur petit mobile */
             }
-            body { overflow-y: auto !important ; height: auto; min-height: 100vh; }
-            
-            
+
             .glass-card { width: 90%; padding: 20px; margin : 20px; position : relative;}
             .btn-takeoff { position: fixed; bottom: 20px; right: 20px; padding: 15px 30px; z-index : 100; }
 
