--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         }
 
         #settings-panel {
-            position: fixed; top: 140px; left: 20px;
+            position: relative; top: 140px; left: 20px;
             width: 250px; max-width: calc(100vw - 40px); max-height: calc(100vh - 100px);
             z-index: 1001;
             text-align: left;
@@ -581,13 +581,24 @@
             /* Mode PAYSAGE (Horizontal) */
             @media (orientation: landscape) {
                 #settings-panel { 
-                    width: 90vw; 
-                    top: 20px; /* On le colle en haut pour gagner de la place */
-                    height: calc(100vh - 40px); 
+                    width: 90vw; top: 20px; /* On le colle en haut pour gagner de la place */
+                    height: calc(90vh - 40px); 
                 }
                 .timer-large { font-size: 15vh; }
                 #flight-screen { padding-top: 20px; }
                 #map { height: 180px; width: 90%; } /* Réduit la carte pour voir le reste */
+
+                #badge-modal .modal-content {
+                    width: 90vw !important; max-width: 800px; height: 90vh;
+                    display: flex; flex-direction: column; padding: 15px;
+                }
+                #badge-list-container {
+                    flex-grow: 1;
+                    max-height: none !important; /* On laisse le flex-grow gérer la place */
+                    overflow-y: auto;
+                    grid-template-columns: repeat(2, 1fr); /* On garde la grille 2x2 */
+                    gap: 10px;
+                }
             }
         }
   
