--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         }
 
         #settings-panel {
-            position: relative; top: 140px; left: 20px;
+            position: fixed; top: 140px; left: 20px;
             width: 250px; max-width: calc(100vw - 40px); max-height: calc(100vh - 100px);
             z-index: 1001;
             text-align: left;
@@ -589,7 +589,7 @@
                 #map { height: 180px; width: 90%; } /* Réduit la carte pour voir le reste */
 
                 #badge-modal .modal-content {
-                    width: 90vw !important; max-width: 800px; height: 90vh;
+                    width: 90vw !important; max-width: 800px; height: 90vh !important;
                     display: flex; flex-direction: column; padding: 15px;
                 }
                 #badge-list-container {
@@ -736,7 +736,7 @@
     <div id="modal-overlay" class="hidden" style="position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.5); backdrop-filter: blur(5px); z-index: 1999;"></div>
 
     <div id="badge-modal" class="modal" style="display:none; position: fixed; inset: 0; background: rgba(0,0,0,0.7); z-index: 2000; justify-content: center; align-items: center; backdrop-filter: blur(5px);">
-        <div class="modal-content" style="background: rgba(255, 255, 255, 0.1); backdrop-filter: blur(15px); border: 1px solid rgba(255, 255, 255, 0.2); width: 90%; max-width: 75vh; border-radius: 20px; padding: 25px; color: white; position: relative; box-shadow: 0 8px 32px rgba(0,0,0,0.5);">
+        <div class="modal-content" style="background: rgba(255, 255, 255, 0.1); backdrop-filter: blur(15px); border: 1px solid rgba(255, 255, 255, 0.2); width: 90%; max-width: 80vw; max-height: 90vh; border-radius: 20px; padding: 25px; color: white; position: relative; box-shadow: 0 8px 32px rgba(0,0,0,0.5);">
         
             <span onclick="closeBadgeModal()" style="position: absolute; top: 15px; right: 20px; cursor: pointer; font-size: 1.5em; opacity: 0.7;">&times;</span>
 
