--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
         .setting-item {
             display: flex; justify-content: space-between;
-            align-items: center; margin: 15px 0;
+            align-items: center; margin: 15px 0; width: 100%;
         }
 
         input[type="range"] { cursor: pointer; accent-color: var(--accent); }
@@ -91,11 +91,11 @@
             padding: 5px;
             font-size: 0.8rem;
             background: rgba(255,255,255,0.1);
-            color: white;
+            color: var(--accent);
             border: 1px solid rgba(255,255,255,0.2);
         }
         #settings-panel option {
-            background: #0b132b; /* Fond sombre pour les options sur mobile */
+            background: var(--bg-color);
         }
 
         .glass-btn-small {
@@ -115,13 +115,6 @@
             transform: scale(1.1);
         }
 
-        .setting-item {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            margin: 15px 0;
-            width: 100%;
-        }
 
         /* Style du bouton dans le menu */
         .menu-btn-history {
@@ -421,6 +414,10 @@
             background-color: var(--bg-color);
         }
 
+        #badge-modal .modal-content {
+            width: 90vw; max-width: 800px; height: 80vh;
+            display: flex; flex-direction: column; padding: 15px;
+        }
         /* Grille de 2x2 pour les succès */
         #badge-list-container {
             display: grid;
@@ -569,12 +566,13 @@
             /* Paramètres communs aux mobiles */
             .glass-card { width: 95%; padding: 20px; margin: 20px auto; position: relative; }
             .btn-takeoff { position: fixed; bottom: 20px; right: 20px; padding: 15px 30px; z-index: 100; }
-            #history-list-box { max-height: 60vh; }
+            #history-list-box { max-height: 50vh !important; }
             #badge-list-container { grid-template-columns: 1fr; }
 
             /* Mode PORTRAIT (Vertical) */
             @media (orientation: portrait) {
                 #settings-panel { width: 85vw; top: 130px;}
+                #history-list-box { max-width: 90vh !important; }
                 .timer-large { font-size: 18vw; }
             }
 
@@ -589,7 +587,7 @@
                 #map { height: 180px; width: 90%; } /* Réduit la carte pour voir le reste */
 
                 #badge-modal .modal-content {
-                    width: 90vw !important; max-width: 800px; height: 80vh !important;
+                    width: 75vw !important; max-width: 800px; height: 80vh !important;
                     display: flex; flex-direction: column; padding: 15px;
                 }
                 #badge-list-container {
@@ -736,7 +734,7 @@
     <div id="modal-overlay" class="hidden" style="position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.5); backdrop-filter: blur(5px); z-index: 1999;"></div>
 
     <div id="badge-modal" class="modal" style="display:none; position: fixed; inset: 0; background: rgba(0,0,0,0.7); z-index: 2000; justify-content: center; align-items: center; backdrop-filter: blur(5px);">
-        <div class="modal-content" style="background: rgba(255, 255, 255, 0.1); backdrop-filter: blur(15px); border: 1px solid rgba(255, 255, 255, 0.2); width: 90%; max-width: 80vw; max-height: 90vh; border-radius: 20px; padding: 25px; color: white; position: relative; box-shadow: 0 8px 32px rgba(0,0,0,0.5);">
+        <div class="modal-content" style="background: rgba(255, 255, 255, 0.1); backdrop-filter: blur(15px); border: 1px solid rgba(255, 255, 255, 0.2); max-width: 600px; max-height: 750px; border-radius: 20px; padding: 25px; color: white; position: relative; box-shadow: 0 8px 32px rgba(0,0,0,0.5);">
         
             <span onclick="closeBadgeModal()" style="position: absolute; top: 15px; right: 20px; cursor: pointer; font-size: 1.5em; opacity: 0.7;">&times;</span>
 
