--- a/index.html
+++ b/index.html
@@ -12,10 +12,12 @@
     <title>Focus Flight - Navigation Immersive</title>
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/eruda"></script>
+    <script>eruda.init();</script>
     
     <style>
         /*<script src="https://cdn.jsdelivr.net/npm/eruda"></script>
-        <script>eruda.init();</script>  A mettre dans le script pour avoir un accès direct à la console (utile au débuggage)*/
+        <script>eruda.init();</script>  A mettre dans le head juste au-dessus pour avoir un accès direct à la console (utile au débuggage)*/
         :root { 
             --accent: #1778bdcf;
             --bg-color: #c8dff6;
