--- a/index.html
+++ b/index.html
@@ -1108,6 +1108,28 @@
             { id: "GRJ", name: "George Airport", lat: -34.0056, lon: 22.3789, country: "Afrique du Sud" },
             { id: "WDH", name: "Windhoek Hosea Kutako", lat: -22.4799, lon: 17.4709, country: "Namibie" },
             { id: "VFA", name: "Victoria Falls", lat: -18.0959, lon: 25.8390, country: "Zimbabwe" },
+            { id: "MPM", name: "Maputo", lat: -25.9155, lon: 32.5732, country: "Mozambique" },
+            { id: "LUN", name: "Lusaka", lat: -15.3308, lon: 28.4526, country: "Zambie" },
+            { id: "GBE", name: "Gaborone", lat: -24.5552, lon: 25.9183, country: "Botswana" },
+            { id: "LAD", name: "Luanda Quatro de Fevereiro", lat: -8.8583, lon: 13.2311, country: "Angola" },
+            { id: "HRE", name: "Harare", lat: -17.9318, lon: 31.0928, country: "Zimbabwe" },
+            { id: "BKO", name: "Bamako Modibo Keïta", lat: 12.5358, lon: -7.9495, country: "Mali" },
+            { id: "OUA", name: "Ouagadougou", lat: 12.3532, lon: -1.5124, country: "Burkina Faso" },
+            { id: "NIM", name: "Niamey Diori Hamani", lat: 13.4815, lon: 2.1836, country: "Niger" },
+            { id: "NDJ", name: "N'Djaména", lat: 12.1328, lon: 15.0333, country: "Tchad" },
+            { id: "KRT", name: "Khartoum", lat: 15.5895, lon: 32.5531, country: "Soudan" },
+            { id: "BGF", name: "Bangui", lat: 4.3984, lon: 18.5188, country: "Rép. Centrafricaine" },
+            { id: "TNR", name: "Antananarivo Ivato", lat: -18.7969, lon: 47.4781, isIsland: true, country: "Madagascar" },
+            { id: "NOS", name: "Nosy Be", lat: -13.3125, lon: 48.3150, isIsland: true, country: "Madagascar" },
+            { id: "HGA", name: "Hargeisa", lat: 9.5147, lon: 44.0888, country: "Somaliland" },
+            { id: "MGQ", name: "Mogadiscio", lat: 2.0133, lon: 45.3047, country: "Somalie" },
+            { id: "JIB", name: "Djibouti-Ambouli", lat: 11.5472, lon: 43.1594, country: "Djibouti" },
+            { id: "FNA", name: "Freetown Lungi", lat: 8.6164, lon: -13.1955, country: "Sierra Leone" },
+            { id: "ROB", name: "Monrovia Roberts", lat: 6.2339, lon: -10.3622, country: "Libéria" },
+            { id: "CKY", name: "Conakry Gbessia", lat: 9.5769, lon: -13.6120, country: "Guinée" },
+            { id: "OXB", name: "Bissau Osvaldo Vieira", lat: 11.8948, lon: -15.6514, country: "Guinée-Bissau" },
+            { id: "LFW", name: "Lomé-Gnassingbé Eyadéma", lat: 6.1656, lon: 1.2545, country: "Togo" },
+            { id: "COO", name: "Cotonou Cadjehoun", lat: 6.3572, lon: 2.3844, country: "Bénin" },
 
             // --- AMÉRIQUE DU NORD (AJOUTS) ---
             { id: "JFK", name: "New York JFK", lat: 40.6413, lon: -73.7781, country: "USA" },
@@ -1134,6 +1156,40 @@
             { id: "NAS", name: "Nassau (Bahamas)", lat: 25.0389, lon: -77.4662, isIsland: true, country: "Bahamas" },
             { id: "PUJ", name: "Punta Cana", lat: 18.5674, lon: -68.3634, isIsland: true, country: "République Dominicaine" },
             { id: "MBJ", name: "Montego Bay", lat: 18.5037, lon: -77.9133, isIsland: true, country: "Jamaïque" },
+            { id: "HAV", name: "La Havane", lat: 22.989, lon: -82.409, isIsland: true, country: "Cuba" },
+            { id: "SDQ", name: "Saint-Domingue", lat: 18.429, lon: -69.668, isIsland: true, country: "République Dominicaine" },
+            { id: "SJU", name: "San Juan", lat: 18.439, lon: -66.001, isIsland: true, country: "Porto Rico" },
+            { id: "BGI", name: "Bridgetown", lat: 13.074, lon: -59.492, isIsland: true, country: "Barbade" },
+            { id: "UVF", name: "Vieux Fort", lat: 13.733, lon: -60.952, isIsland: true, country: "Sainte-Lucie" },
+            { id: "RAI", name: "Praia", lat: 14.924, lon: -23.483, isIsland: true, country: "Cap-Vert" },
+            { id: "SID", name: "Espargos", lat: 16.741, lon: -22.949, isIsland: true, country: "Cap-Vert" },
+            { id: "BDA", name: "Bermudes", lat: 32.363, lon: -64.678, isIsland: true, country: "Royaume-Uni" },
+            { id: "STT", name: "Saint Thomas", lat: 18.337, lon: -64.973, isIsland: true, country: "Îles Vierges (USA)" },
+            { id: "STX", name: "Sainte-Croix", lat: 17.701, lon: -64.798, isIsland: true, country: "Îles Vierges (USA)" },
+            { id: "EIS", name: "Tortola", lat: 18.445, lon: -64.543, isIsland: true, country: "Îles Vierges (UK)" },
+            { id: "SVD", name: "Saint-Vincent", lat: 13.144, lon: -61.210, isIsland: true, country: "St-Vincent-et-les-Grenadines" },
+            { id: "GND", name: "Grenade", lat: 12.004, lon: -61.786, isIsland: true, country: "Grenade" },
+            { id: "UNI", name: "Union Island", lat: 12.599, lon: -61.418, isIsland: true, country: "St-Vincent-et-les-Grenadines" },
+            { id: "BQU", name: "Bequia", lat: 13.011, lon: -61.265, isIsland: true, country: "St-Vincent-et-les-Grenadines" },
+            { id: "ANU", name: "Antigua", lat: 17.136, lon: -61.792, isIsland: true, country: "Antigua-et-Barbuda" },
+            { id: "SKB", name: "Basseterre", lat: 17.311, lon: -62.718, isIsland: true, country: "Saint-Kitts-et-Nevis" },
+            { id: "AXA", name: "Anguilla", lat: 18.204, lon: -63.055, isIsland: true, country: "Anguilla" },
+            { id: "EUX", name: "Saint-Eustache", lat: 17.497, lon: -62.979, isIsland: true, country: "Pays-Bas caribéens" },
+            { id: "SAB", name: "Saba", lat: 17.645, lon: -63.220, isIsland: true, country: "Pays-Bas caribéens" }, // La piste la plus courte du monde !
+            { id: "AUA", name: "Aruba", lat: 12.501, lon: -70.015, isIsland: true, country: "Aruba" },
+            { id: "CUR", name: "Curaçao", lat: 12.188, lon: -68.959, isIsland: true, country: "Curaçao" },
+            { id: "BON", name: "Bonaire", lat: 12.130, lon: -68.268, isIsland: true, country: "Bonaire" },
+            { id: "TAB", name: "Tobago", lat: 11.149, lon: -60.832, isIsland: true, country: "Trinité-et-Tobago" },
+            { id: "POS", name: "Port-d'Espagne", lat: 10.595, lon: -61.337, isIsland: true, country: "Trinité-et-Tobago" },
+            { id: "PLS", name: "Providenciales", lat: 21.773, lon: -72.265, isIsland: true, country: "Turks-et-Caicos" },
+            { id: "GCM", name: "Grand Cayman", lat: 19.292, lon: -81.359, isIsland: true, country: "Îles Caïmans" },
+            { id: "STT", name: "Charlotte Amalie", lat: 18.3373, lon: -64.9731, isIsland: true, country: "Îles Vierges (USA)" },
+            { id: "VIJ", name: "Virgin Gorda", lat: 18.4454, lon: -64.4272, isIsland: true, country: "Îles Vierges (UK)" },
+            { id: "BBQ", name: "Codrington", lat: 17.6358, lon: -61.8252, isIsland: true, country: "Barbuda" },
+            { id: "NEV", name: "Charlestown", lat: 17.2057, lon: -62.5898, isIsland: true, country: "Niévès (Nevis)" },
+            { id: "MNI", name: "Plymouth", lat: 16.7110, lon: -62.1560, isIsland: true, country: "Montserrat" },
+            { id: "DOM", name: "Roseau", lat: 15.3370, lon: -61.3000, isIsland: true, country: "Dominique" },
+            { id: "BIM", name: "Bimini", lat: 25.7000, lon: -79.2660, isIsland: true, country: "Bahamas" },
 
             // --- AMÉRIQUE DU SUD (AJOUTS) ---
             { id: "GRU", name: "São Paulo Guarulhos", lat: -23.4356, lon: -46.4731, country: "Brésil" },
@@ -1152,6 +1208,23 @@
             { id: "UIO", name: "Quito Mariscal Sucre", lat: -0.1292, lon: -78.3575, country: "Équateur" },
             { id: "GYE", name: "Guayaquil", lat: -2.1509, lon: -79.8835, country: "Équateur" },
             { id: "VVI", name: "Santa Cruz Viru Viru", lat: -17.6447, lon: -63.1353, country: "Bolivie" },
+            { id: "USH", name: "Ushuaïa", lat: -54.8433, lon: -68.2958, country: "Argentine" }, // L'aéroport le plus au sud du monde
+            { id: "LPB", name: "La Paz El Alto", lat: -16.5133, lon: -68.1923, country: "Bolivie" }, // Un des plus hauts (4061m)
+            { id: "MAO", name: "Manaus Eduardo Gomes", lat: -3.0358, lon: -60.0506, country: "Brésil" }, // En plein cœur de l'Amazonie
+            { id: "IPC", name: "Île de Pâques", lat: -27.1648, lon: -109.4222, isIsland: true, country: "Chili" }, // Le plus isolé au monde
+            { id: "CCS", name: "Caracas Simón Bolívar", lat: 10.6031, lon: -66.9906, country: "Venezuela" },
+            { id: "CTG", name: "Carthagène des Indes", lat: 10.4424, lon: -75.5130, country: "Colombie" },
+            { id: "PBM", name: "Paramaribo Zanderij", lat: 5.4528, lon: -55.1878, country: "Suriname" },
+            { id: "CAY", name: "Cayenne Félix Eboué", lat: 4.8228, lon: -52.3603, country: "Guyane Française" },
+            { id: "CUZ", name: "Cusco Velasco Astete", lat: -13.5357, lon: -71.9387, country: "Pérou" }, // Près du Machu Picchu
+            { id: "ASU", name: "Asunción Silvio Pettirossi", lat: -25.2403, lon: -57.5192, country: "Paraguay" },
+            { id: "MVD", name: "Montevideo Carrasco", lat: -34.8384, lon: -56.0308, country: "Uruguay" },
+            { id: "FTE", name: "El Calafate", lat: -50.2800, lon: -72.0531, country: "Argentine" }, // Porte des glaciers de Patagonie
+            { id: "PUQ", name: "Punta Arenas", lat: -53.0026, lon: -70.8546, country: "Chili" },
+            { id: "SSA", name: "Salvador de Bahia", lat: -12.9086, lon: -38.3225, country: "Brésil" },
+            { id: "FOR", name: "Fortaleza", lat: -3.7761, lon: -38.5325, country: "Brésil" },
+            { id: "REC", name: "Recife Guararapes", lat: -8.1264, lon: -34.9228, country: "Brésil" },
+            { id: "IGU", name: "Foz do Iguaçu", lat: -25.5977, lon: -54.4850, country: "Brésil" }, // Les célèbres chutes d'eau
 
             // --- ASIE (AJOUTS) ---
             { id: "HND", name: "Tokyo Haneda", lat: 35.5494, lon: 139.7798, isIsland: true, country: "Japon" },
@@ -1194,6 +1267,26 @@
             { id: "ALA", name: "Almaty Intl", lat: 43.3520, lon: 77.0405, country: "Kazakhstan" },
             { id: "TAS", name: "Tachkent Intl", lat: 41.2579, lon: 69.2812, country: "Ouzbékistan" },
             { id: "GYD", name: "Bakou", lat: 40.4675, lon: 50.0467, country: "Azerbaïdjan" },
+            { id: "KTM", name: "Katmandou", lat: 27.6966, lon: 85.3591, country: "Népal" }, // Porte de l'Everest
+            { id: "PBH", name: "Paro", lat: 27.4032, lon: 89.4246, country: "Bhoutan" }, // L'un des plus difficiles au monde
+            { id: "LXA", name: "Lhassa", lat: 29.2978, lon: 90.9119, country: "Tibet (Chine)" }, // Aéroport de haute altitude
+            { id: "ULN", name: "Oulan-Bator", lat: 47.6472, lon: 106.7667, country: "Mongolie" }, // Entre steppes et déserts
+            { id: "LPQ", name: "Luang Prabang", lat: 19.8975, lon: 102.1625, country: "Laos" },
+            { id: "IKT", name: "Irkoutsk", lat: 52.2680, lon: 104.3889, country: "Russie (Sibérie)" }, // Près du Lac Baïkal
+            { id: "KJA", name: "Krasnoïarsk", lat: 56.1731, lon: 92.4933, country: "Russie" },
+            { id: "SVX", name: "Ekaterinbourg", lat: 56.7431, lon: 60.8027, country: "Russie (Oural)" },
+            { id: "YKS", name: "Iakoutsk", lat: 62.0933, lon: 129.7711, country: "Russie" }, // La ville la plus froide du monde
+            { id: "PKC", name: "Petropavlovsk", lat: 53.1675, lon: 158.4539, country: "Russie (Kamchatka)" }, // Terre de volcans
+            { id: "CTU", name: "Chengdu Shuangliu", lat: 30.5785, lon: 103.9471, country: "Chine" }, // Capitale des pandas
+            { id: "XIY", name: "Xi'an Xianyang", lat: 34.4471, lon: 108.7516, country: "Chine" }, // Armée de terre cuite
+            { id: "CKG", name: "Chongqing Jiangbei", lat: 29.7192, lon: 106.6417, country: "Chine" }, // Ville montagneuse géante
+            { id: "URC", name: "Ürümqi Diwopu", lat: 43.9071, lon: 87.4742, country: "Chine (Xinjiang)" }, // Très loin à l'ouest
+            { id: "KMG", name: "Kunming Changshui", lat: 25.1019, lon: 102.9292, country: "Chine" },
+            { id: "ASB", name: "Achgabat", lat: 37.9868, lon: 58.3611, country: "Turkménistan" },
+            { id: "FRU", name: "Bichkek", lat: 43.0613, lon: 74.4776, country: "Kirghizistan" },
+            { id: "KHI", name: "Karachi", lat: 24.9065, lon: 67.1608, country: "Pakistan" },
+            { id: "ISB", name: "Islamabad", lat: 33.5495, lon: 72.8222, country: "Pakistan" },
+            { id: "KBL", name: "Kaboul", lat: 34.5658, lon: 69.2123, country: "Afghanistan" },
 
             // --- OCÉANIE ---
             { id: "SYD", name: "Sydney Kingsford Smith", lat: -33.9399, lon: 151.1753, country: "Australie" },
